--- a/index.html
+++ b/index.html
@@ -390,9 +390,8 @@
 			<div data-role="collapsible-set">
 				<div data-role="collapsible">
 					<h3>Mortal Kombat II Guide</h3>
-                    <ul> 
-                    	<li id="charactermoves">Source for Character Moves</li>
-                    </ul>              
+                        <p id="charactermoves">Source for Character Moves</p>
+                                 
 				</div><!-- collapsible -->
 				
             <div data-role="collapsible-set">
