Added Video Image

--- a/index.html
+++ b/index.html
@@ -350,28 +350,12 @@
 	<div data-role="content">
 		<div class="ui-grid-a" id="videolist">
 			<div class="ui-block-a">
-				<a href="http://youtu.be/rD4P69D0X4k">
-					<div class="movietitle">Adobe Edge</div>
-					<img src="file:///henryngoy/School Files/Spring Quarter 2013/BIT 271/Ex_Files_jQ_Mob_Web_App/Exercise Files/05-01/finished/mobile/images/video_whatisedge.jpg" alt="Video: What is Adobe Edge?">
+				<a href="http://www.youtube.com/watch?v=t-NolhJYPg4">
+					<div class="movietitle">Mortal Kombat II Fatalities</div>
+					<img src="Images/Video /mk2fatalities.fw.png" alt="mk2fatalities" width="480" height="320">
 				</a>
 			</div>
-			<div class="ui-block-b">
-				<a href="http://youtu.be/MHdHKh4AswY">
-					<div class="movietitle">Edge UI</div>
-					<img src="file:///henryngoy/School Files/Spring Quarter 2013/BIT 271/Ex_Files_jQ_Mob_Web_App/Exercise Files/05-01/finished/mobile/images/video_edgeui.jpg" alt="Video: Understanding the Edge Interface">
-				</a>
-			</div>
-			<div class="ui-block-a">
-				<a href="http://youtu.be/MHdHKh4AswY">
-					<div class="movietitle">Toggle buttons</div>
-					<img src="file:///henryngoy/School Files/Spring Quarter 2013/BIT 271/Ex_Files_jQ_Mob_Web_App/Exercise Files/05-01/finished/mobile/images/video_toggle.jpg" alt="Video: Create Toggle button">
-				</a>
-			</div>
-			<div class="ui-block-b">
-				<a href="http://youtu.be/MHdHKh4AswY">
-					<div class="movietitle">Image uploader</div>
-					<img src="file:///henryngoy/School Files/Spring Quarter 2013/BIT 271/Ex_Files_jQ_Mob_Web_App/Exercise Files/05-01/finished/mobile/images/video_uploader.jpg" alt="Video: Build an image uploader">
-				</a>
+		
 			</div>
 		</div>
 	</div>
