Updated video link

--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
 
 	<div data-role="content">
      <video controls>
-			<source id="mk2vid1" type="video/mp4">
+			<source src="Images/Video /Mortal_Kombat_II_Fatalities.mp4" type="video/mp4">
       </video>
 			</div>
 		
